# ecospheres-search-index

./: README.md  build-index.py  docker-compose.yml  pyproject.toml  settings.yaml
.github/workflows/: reindex.yml
ecospheres_search_index/: cli.py
